Owned composition reports what it manufactured, not what it holds
A part is produced per owning instance and identified by ⟨production site, owner
id⟩, so composition is meant to find the parts it made last time and reuse them:
on a settled domain it should create nothing at all. Creating is therefore the
reportable event, and it was the one number nobody had. A Remap manufactured
6863 duplicate Names on every press while every figure on screen stayed
plausible, because what was counted was how many parts existed rather than how
many had just been invented.

The two are now separate all the way out. OwnedComponents already returned every
part it has; it also returns only the ones it made, that list reaches the run,
and a bucket appears only when it is non-empty — so silence means the rule
recognised its own work, which is the thing worth knowing.

Both audits say whether they ran, and refuse to hold findings if they did not.
Enrich composes but never reifies; a loaded snapshot does neither, and reporting
that the same way as a rule that ran and found nothing is how "not evaluated"
gets read as "clean".

The tests now cross the joins rather than stopping at each end. Both defects
this week lived exactly there — a result that re-asked the finished pool, a copy
that dropped one flag — and both passed every test in existence. A real
transform now produces a finding, the finding reaches a run, and the effects are
read back out of it; and a second composition pass over its own output is
asserted to manufacture nothing.

Refs #113.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>